--- a/src/app/_auth/login/login.component.html
+++ b/src/app/_auth/login/login.component.html
@@ -1,17 +1,31 @@
-<div class="text-center login-form">
-  <form class="form-signin">
-    <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
+<div class="wrapper">
+  <div class="row">
+    <div class="card col-md-4 offset-md-4 shadow-lg p-3 mb-5 bg-white">
+      <h3 style="margin-top: 20px;">Login</h3>
+      <small>With a FRS account you can make bookings and manage
+        them quickly and easily.
+      </small>
+      <div class="row">
+        User Name : <input class="form-control" type="text" name="username" [(ngModel)]="username">
+      </div>
+      <div class="row">
+        Password : <input class="form-control" type="password" name="password" [(ngModel)]="password">
+      </div>
+      <div class="row">
+        <button (click)=checkLogin() class="logInBtn btn btn-success">
+          Login
+        </button>
+      </div>
+      <hr>
+      <div class="row">
+                <span style="margin-left: auto; margin-right: auto;">
+                    OR<br>
+                    Sign Up for a new account
+                </span>
+      </div>
+      <div class="row">
+        <button type="button" class="btn btn-primary signUpBtn" routerLink="/register">SIGN UP</button>
+      </div>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+  </div>
 </div>
-
