--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 body{
-  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  background-repeat: no-repeat;
+  background-size: 100vw 75vh;
+}
+hr{
+  border-color: darkgray;
 }
