--- a/src/app/auth/update-password/update-password.component.html
+++ b/src/app/auth/update-password/update-password.component.html
@@ -20,6 +20,8 @@
         name="re-password"
       >
     </div>
-    <button type="submit" class="btn btn-primary">Update</button>
+    <div class="text-center">
+      <button type="submit" class="btn btn-primary">Update</button>
+    </div>
   </form>
 </div>
