--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -10,6 +10,8 @@
         name="username"
       >
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="text-center">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
   </form>
 </div>
