--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,34 +1,63 @@
 <div class="d-flex vw-100 vh-100 align-items-center justify-content-center">
   <form class="bg-white rounded p-5" style="width: 500px" (ngSubmit)="submit()">
     <h3 class="text-center mb-4 text-muted">Login</h3>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input
-        type="text"
-        class="form-control"
-        id="username"
-        name="username"
-        [(ngModel)]="loginRequest.username"
-      >
+    <div style="margin-top: 5px" *ngIf="response.status"
+         class="alert alert-danger">
+      {{response.message}}
     </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-        [(ngModel)]="loginRequest.password"
-      >
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-    <button
-      style="margin-left: 10px"
-      class="btn btn-dark"
-      routerLink="/register">Sign Up
-    </button>
-    <hr>
-    <p class="text-center"><a routerLink="/forgot-password">Forgot Password</a></p>
+    <div class="form-group-login">
+      <div style="margin-bottom: 10px">
+        <label for="username">Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="username"
+          name="username"
+          ngModel
+          [(ngModel)]="loginRequest.username"
+          #username="ngModel"
+          required
+        >
+        <div style="margin-top: 5px" *ngIf="username.invalid && (username.dirty || username.touched)"
+             class="alert alert-danger">
+          <div *ngIf="username.errors.required">
+            Username is required
+          </div>
+        </div>
+      </div>
+      <div style="margin-bottom: 10px">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          [(ngModel)]="loginRequest.password"
+          ngModel
+          #password="ngModel"
+          required
+          minlength="8"
+        >
 
+        <div style="margin-top: 5px" *ngIf="password.invalid && (password.dirty || password.touched)"
+             class="alert alert-danger">
+
+          <div *ngIf="password.errors.required">
+            Password is required
+          </div>
+          <div *ngIf="password.errors.minlength">
+            Password must be at least 8 characters long.
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Login</button>
+      <button
+        style="margin-left: 10px"
+        class="btn btn-dark"
+        routerLink="/register">Sign Up
+      </button>
+      <hr>
+      <p class="text-center"><a routerLink="/forgot-password">Forgot Password</a></p>
+    </div>
   </form>
 </div>
