--- a/src/app/auth/update-password/update-password.component.html
+++ b/src/app/auth/update-password/update-password.component.html
@@ -1,14 +1,35 @@
 <div class="d-flex vw-100 vh-100 align-items-center justify-content-center">
-  <form class="bg-white rounded p-5" style="width: 500px">
+  <form class="bg-white rounded p-5" style="width: 500px" (ngSubmit)="submit()" #updatePasswordForm="ngForm">
     <h3 class="text-center mb-4 text-muted">Update Password</h3>
+    <div style="margin-top: 5px" *ngIf="response.status"
+         class="alert alert-danger">
+      {{response.message}}
+    </div>
     <div class="form-group">
       <input
         type="password"
         class="form-control"
         placeholder="Enter new password"
-        id="password"
-        name="password"
+        id="userPassword"
+        name="userPassword"
+        [(ngModel)]="password"
+        ngModel
+        #userPassword="ngModel"
+        required
+        minlength="8"
       >
+
+      <div style="margin-top: 5px" *ngIf="userPassword.invalid && (userPassword.dirty || userPassword.touched)"
+           class="alert alert-danger">
+
+        <div *ngIf="userPassword.errors.required">
+          Password is required
+        </div>
+        <div *ngIf="userPassword.errors.minlength">
+          Password must be at least 8 characters long.
+        </div>
+      </div>
+
     </div>
 
     <div class="form-group">
@@ -18,10 +39,26 @@
         placeholder="Enter new password again"
         id="re-password"
         name="re-password"
+        [(ngModel)]="re_password"
+        ngModel
+        #reUserPassword="ngModel"
+        required
+        minlength="8"
       >
+
+      <div style="margin-top: 5px" *ngIf="reUserPassword.invalid && (reUserPassword.dirty || reUserPassword.touched)"
+           class="alert alert-danger">
+
+        <div *ngIf="reUserPassword.errors.required">
+          Password is required
+        </div>
+        <div *ngIf="reUserPassword.errors.minlength">
+          Password must be at least 8 characters long.
+        </div>
+      </div>
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Update</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!updatePasswordForm.form.valid">Update</button>
     </div>
   </form>
 </div>
