--- a/src/app/auth/user/user.component.html
+++ b/src/app/auth/user/user.component.html
@@ -1,1 +1,6 @@
-<p>User</p>
+<nav class="navbar navbar-light bg-white">
+  <div class="container">
+    <p>User</p>
+    <button class="btn-dark"(click)="logout()">Logout</button>
+  </div>
+</nav>
